--- a/src/content/docs/docs/index.mdx
+++ b/src/content/docs/docs/index.mdx
@@ -3,7 +3,7 @@ title: Welcome to Distr
 description: Get started with Distr for software distribution.
 template: splash
 hero:
-  tagline: The easiest way to distribute enterprise software.
+  tagline: The easiest way for Software and AI companies to distribute enterprise software.
   image:
     file: ../../../assets/distr.svg
   actions:
