--- a/src/content/docs/docs/product/customer-portal.mdx
+++ b/src/content/docs/docs/product/customer-portal.mdx
@@ -5,7 +5,7 @@ sidebar:
   order: 2
 ---
 
-The Customer Portal provides end-customers with the essential features they need to manage the deployment of the ISV's applications. Compared to the Vendor Portal, it is intentionally more basic, following a "less is more" approach. This design philosophy acknowledges that end-customer should only care about their deployments and should not have to deal with anything else cluttering their management console.
+The Customer Portal provides end-customers with the essential features they need to manage the deployment of the vendor's applications. Compared to the Vendor Portal, it is intentionally more basic, following a "less is more" approach. This design philosophy acknowledges that end-customer should only care about their deployments and should not have to deal with anything else cluttering their management console.
 
 The customer portal offers:
 
@@ -29,4 +29,4 @@ The customer portal offers:
 If ever in doubt of which portal you are looking at, in the top left corner of the screen you can find the name of the portal you're currently in.
 :::
 
-The Customer Portal can be [customized](/docs/product/branding/) with the ISV's corporate logo and name, making Distr feel like an extension of the ISV's product rather than just another tool for the end-customer to adopt and learn.
+The Customer Portal can be [customized](/docs/product/branding/) with the vendor's corporate logo and name, making Distr feel like an extension of the software company's product rather than just another tool for the end-customer to adopt and learn.
