--- a/src/content/docs/docs/product/faqs.mdx
+++ b/src/content/docs/docs/product/faqs.mdx
@@ -9,7 +9,7 @@ sidebar:
   <summary>What is Distr?</summary>
   <p>
     Distr is an open-core commercial software distribution platform designed for
-    Independent Software Vendors (ISVs) to manage and deploy software to
+    Software and AI companies to manage and deploy software to
     customer-controlled environments.
   </p>
 </details>
@@ -19,7 +19,7 @@ sidebar:
   <p>
     Distr agents are lightweight components that are installed in the target
     deployment environment and can be delivered by Distr or embedded directly
-    into ISV Helm charts or Docker Compose files. They handle lifecycle tasks
+    into the vendor's Helm charts or Docker Compose files. They handle lifecycle tasks
     such as installation, updates, and rollbacks while providing essential
     metrics and logs.
   </p>
@@ -41,7 +41,7 @@ sidebar:
     No, there is no way to toggle between the Vendor and Customer views. If a
     vendor wants to manage their own deployments, they can do so using the
     Deployments tab within the Vendor Portal. The Customer Portal is only
-    accessible to end-customers who have been onboarded by an ISV. After
+    accessible to end-customers who have been onboarded by a software vendor. After
     onboarding, the customer will receive an email to set their credentials.
     Once the credentials are set, the end-customer can access the Customer
     Portal.{' '}
@@ -55,7 +55,7 @@ sidebar:
   <p>
     {' '}
     Yes, through the [License management feature](/docs/guides/license-mgmt/),
-    ISVs can set expiration dates for each license. Once an expiration date
+    Vendors can set expiration dates for each license. Once an expiration date
     expires, the end customer will no longer have access to the software
     versions previously granted by the license.{' '}
   </p>
