--- a/src/content/docs/docs/product/vendor-portal.mdx
+++ b/src/content/docs/docs/product/vendor-portal.mdx
@@ -5,9 +5,9 @@ sidebar:
   order: 1
 ---
 
-The Independent Software Vendor (ISV) Portal is the primary interface for interacting with the Distr hub.
+The Vendor portal is the primary interface for interacting with the Distr hub.
 
-Since Distr is a platform specifically built for ISVs, the vendor portal serves as the gateway to access all Distr features. In contrast, the [Customer Portal](/docs/product/customer-portal/) is a simplified version of the vendor portal, designed to provide end-customers with the ability to configure and control their distributions.
+Since Distr is a platform specifically built for Software and AI companies, the vendor portal serves as the gateway to access all Distr features. In contrast, the [Customer Portal](/docs/product/customer-portal/) is a simplified version of the vendor portal, designed to provide end-customers with the ability to configure and control their distributions.
 
 ![vendor-console](../../../../assets/docs/product/vendor-portal/vendor-portal.png)
 
