--- a/src/content/docs/docs/use-cases/edge-deployments.mdx
+++ b/src/content/docs/docs/use-cases/edge-deployments.mdx
@@ -5,33 +5,33 @@ sidebar:
   order: 4
 ---
 
-In addition to developing and deploying software for end customers, many ISVs extend their operations to include edge deployments. These involve scenarios where the ISV not only provides the software but also ships physical edge devices or fully owns and controls the deployment target where the software is installed.
+In addition to developing and deploying software for end customers, many Software and AI companies extend their operations to include edge deployments. These involve scenarios where vendors not only provide the software but also ship physical edge devices or fully own and control the deployment target where the software is installed.
 
 Edge deployments are characterized by the deployment of software to decentralized, often resource-constrained environments that operate outside of traditional data centers or cloud infrastructures. These environments are typically closer to the source of data generation, enabling faster processing, lower latency, and increased efficiency for specific use cases.
 
 ## Examples of Edge Deployments
 
-- **IoT Devices**: Devices such as smart sensors, wearables, or connected appliances equipped with ISV software that collect, process, and analyze data in real-time.
-- **Hardware with Pre-Installed ISV Software**: Custom-built hardware, like medical devices, industrial machinery, or point-of-sale systems, shipped with the ISV’s software pre-installed and pre-configured.
-- **Satellites**: Space-based systems where ISVs deploy software to manage and operate satellites, handle data transmission, or run specialized algorithms directly onboard.
+- **IoT Devices**: Devices such as smart sensors, wearables, or connected appliances equipped with vendor software that collect, process, and analyze data in real-time.
+- **Hardware with Pre-Installed Software**: Custom-built hardware, like medical devices, industrial machinery, or point-of-sale systems, shipped with the vendor software pre-installed and pre-configured.
+- **Satellites**: Space-based systems where vendors deploy software to manage and operate satellites, handle data transmission, or run specialized algorithms directly onboard.
 
 ## Use cases
 
 Edge deployments span a wide range of industries and use cases, including:
 
-- **Healthcare**: Medical imaging devices or portable diagnostic tools running ISV software to analyze patient data locally without requiring internet access.
-- **Manufacturing**: Industrial robots and monitoring systems equipped with ISV applications to optimize production lines or predict maintenance needs on the factory floor.
-- **Telecommunications**: Network edge devices, such as base stations, running ISV software to enhance connectivity and reduce latency for users in remote areas.
-- **Transportation**: Vehicles outfitted with ISV software for fleet management, navigation, or autonomous driving functions.
-- **Energy**: Wind turbines, solar panels, or grid equipment running ISV software to monitor performance and optimize energy generation or distribution.
+- **Healthcare**: Medical imaging devices or portable diagnostic tools running vendor software to analyze patient data locally without requiring internet access.
+- **Manufacturing**: Industrial robots and monitoring systems running vendor software to optimize production lines or predict maintenance needs on the factory floor.
+- **Telecommunications**: Network edge devices, such as base stations, running vendor software to enhance connectivity and reduce latency for users in remote areas.
+- **Transportation**: Vehicles running vendor software for fleet management, navigation, or autonomous driving functions.
+- **Energy**: Wind turbines, solar panels, or grid equipment running vendor software to monitor performance and optimize energy generation or distribution.
 - **Defense and Aerospace**: Edge systems used for real-time data analysis, mission-critical tasks, or secure communication in defense or space missions.
 
 ## Challenges of Edge Deployments
 
-While edge deployments offer many advantages, they also come with unique challenges that ISVs must address:
+While edge deployments offer many advantages, they also come with unique challenges that vendors must address:
 
-- **Resource Constraints**: Edge devices often have limited computing power, memory, and storage, requiring ISVs to optimize their software for efficiency.
+- **Resource Constraints**: Edge devices often have limited compute power, memory, and storage, requiring vendors to optimize their software for efficiency.
 - **Connectivity Issues**: Many edge environments lack reliable network connectivity, making it difficult to push updates or retrieve telemetry data in real-time.
 - **Security Risks**: Decentralized deployments are more vulnerable to physical tampering and cybersecurity threats, requiring robust encryption and access controls.
-- **Hardware Variability**: ISVs must account for diverse hardware configurations and ensure compatibility across different devices.
+- **Hardware Variability**: Vendors must account for diverse hardware configurations and ensure compatibility across different devices.
 - **Lifecycle Management**: Managing updates, maintenance, and troubleshooting across numerous decentralized devices can be complex and resource-intensive.
