--- a/src/content/docs/docs/getting-started/quickstart.mdx
+++ b/src/content/docs/docs/getting-started/quickstart.mdx
@@ -9,27 +9,27 @@ import {Aside} from '@astrojs/starlight/components';
 
 ## Prerequisites
 
-Distr is designed to help distribute "on-prem" ready software to [customer-controlled environments](https://glasskube.dev/blog/5-ways-to-succeed-without-access-to-customer-environments/). The key phrase here is ["on-prem ready"](https://glasskube.dev/white-paper/building-blocks/).
+Distr is designed to help distribute "self-managed" ready software to [customer-controlled environments](https://glasskube.dev/blog/5-ways-to-succeed-without-access-to-customer-environments/). The key phrase here is ["self-managed ready"](https://glasskube.dev/white-paper/building-blocks/).
 
-### What does "on-prem ready" mean?
+### What does "self-managed ready" mean?
 
-#### On-prem ready checklist:
+#### Self-managed ready checklist:
 
 - Your application is **fully containerized** (Docker or Helm)
 - You are using some sort of **consistent versioning**
 - If your application has dependencies, these should also be **standardized and declared**
 
-If you're an ISV who has developed a SaaS product and later been approached by a customer requesting to use your product "on-prem," you’ve likely experienced the challenges of lacking on-prem readiness. Deploying to on-premises, self-hosted, or complex customer-controlled environments requires deliberate decisions and architectural considerations made early in the development process to ensure such deployments are practical.
+If you're a software company who has developed a SaaS product and later been approached by a customer requesting to use your product in a "self-managed" deployment, you've likely experienced the challenges of lacking self-managed readiness. Deploying to self-managed environments or complex customer-controlled environments requires deliberate decisions and architectural considerations made early in the development process to ensure such deployments are practical.
 
-Software built with on-prem readiness in mind from the start often reflects thoughtful design, focusing on maintainability and configurations suitable for future on-prem use cases. However, many software solutions aren’t initially created with these scenarios in mind. As customer requirements evolve, SaaS products may need adjustments to support on-prem deployments. Ideally, your application should already be containerized, with a Docker Compose file or Helm chart prepared. If not, feel free to reach out for white-labeled onboarding assistance.
+Software built with self-managed readiness in mind from the start often reflects thoughtful design, focusing on maintainability and configurations suitable for future self-managed use cases. However, many software solutions aren't initially created with these scenarios in mind. As customer requirements evolve, SaaS products may need adjustments to support self-managed deployments. Ideally, your application should already be containerized, with a Docker Compose file or Helm chart prepared. If not, feel free to reach out for white-labeled onboarding assistance.
 
-#### What changes are needed for on-prem readiness?
+#### What changes are needed for self-managed readiness?
 
-To bridge this gap, we've compiled a document outlining the foundational building blocks for achieving on-prem readiness. You can access this comprehensive [whitepaper here](https://glasskube.dev/white-paper/building-blocks/).
+To bridge this gap, we've compiled a document outlining the foundational building blocks for achieving self-managed readiness. You can access this comprehensive [whitepaper here](https://glasskube.dev/white-paper/building-blocks/).
 
 ## Quickstart
 
-In this Quickstart guide, we’ll walk through the primary workflow designed to help Distr users get the most value from the platform. Here’s what we’ll cover:
+In this Quickstart guide, we'll walk through the primary workflow designed to help Distr users get the most value from the platform. Here's what we'll cover:
 
 - Open your **free** [Distr account](https://distr.sh/).
 - **Onboarding a sample application** to explore how Distr works.
@@ -38,13 +38,13 @@ In this Quickstart guide, we’ll walk through the primary workflow designed to 
 - Assign yourself as the owner of the deployment target environment.
 - **Creating a deployment** and verifying its installation using the Distr agent.
 
-All of this can be easily accomplished by following the helpful Onboarding Wizard. Let’s get started!
+All of this can be easily accomplished by following the helpful Onboarding Wizard. Let's get started!
 
 ## Follow the onboarding wizard to get started
 
 <Aside type="note">
   The Onboarding Wizard will only appear if your Distr account has not yet
-  created its first application, customer, or deployment. If you’ve already used
+  created its first application, customer, or deployment. If you've already used
   the Onboarding Wizard but would like to add more applications, customers, or
   deployments, please follow these
   [instructions.](#onboard-more-applications-customers-and-deployments)
@@ -75,7 +75,8 @@ At this stage, Distr handles the process of locating the app definition file, ex
 Next, you'll move to the stage where users are prompted to choose a name and define who is responsible for the target environment where the application will be deployed. Deployment targets can either be managed by the end-customer or directly by the Distr user. At this step, you'll find two checkboxes to choose from:
 
 -- **"I Am"**: Select this if you are responsible for and have control over the deployment target, such as for IoT, edge, or internal use cases.
--- **"An employee of the customer"**: Select this when the end-user's team is responsible for managing deployments, and the Distr user does not have access to the deployment target. More suited towards On-prem and end-customer hosted use cases.
+
+-- **"An employee of the customer"**: Select this when the end-user's team is responsible for managing deployments, and the Distr user does not have access to the deployment target. More suited towards the self-managed use case.
 
 ![define-owner](../../../../assets/docs/getting-started/quickstart/customer-creation.png)
 
@@ -154,7 +155,7 @@ Head over to the `Customers` tab and in the top right corner click on the `+ Inv
   Once the customer's email address is submitted, the recipient will receive an
   email containing login credentials for the Distr Customer Portal. Through this
   portal, they can view and manage the deployments of the applications they have
-  purchased from the ISV.
+  purchased from the software company.
 </Aside>
 
 ### Add More Deployments
