--- a/src/content/docs/docs/product/agents.mdx
+++ b/src/content/docs/docs/product/agents.mdx
@@ -7,14 +7,14 @@ sidebar:
 
 import {Aside} from '@astrojs/starlight/components';
 
-Alongside the Distr Hub, complete the core of the Distr platform are its lightweight agents, designed to be installed in the customer's environment alongside the ISV’s application. These agents provide the functionality necessary for managing application life cycles in decentralized and customer-controlled environments, without requiring direct access to the deployment target.
+Alongside the Distr Hub, what completes the core of the Distr platform are its lightweight agents, designed to be installed in the customer's environment alongside the software vendor's application. These agents provide the functionality necessary for managing application life cycles in decentralized and customer-controlled environments, without requiring direct access to the deployment target.
 
-Distr offers two pre-built agent types, tailored for different deployment scenarios: one for Helm and another for Docker Compose. These agents handle critical lifecycle tasks, including guided installation, updates, and performing health checks. By automating these processes, the agents simplify the operational burden for end customers and reduce the need for ISV intervention.
+Distr offers two pre-built agent types, tailored for different deployment scenarios: one for Helm and another for Docker Compose. These agents handle critical lifecycle tasks, including guided installation, updates, and performing health checks. By automating these processes, the agents simplify the operational burden for end customers and reduce the need for the vendor's intervention.
 
 Beyond lifecycle management, the agents are equipped to collect and provide essential metrics such as application health status and version information. They also aggregate logs, ensuring that troubleshooting can proceed even if a deployment fails and cannot report the error itself.
 
 <Aside>
-  We are currently working an agent version that can be integrated into the ISVs
+  We are currently working on an agent version that can be integrated into the Software or AI companies'
   Helm chart or Docker Compose file. This will allow for a more seamless
   deployment experience for the end customer. For more information feel free to
   reach out.
