--- a/src/content/docs/docs/product/agents.mdx
+++ b/src/content/docs/docs/product/agents.mdx
@@ -14,8 +14,8 @@ Distr offers two pre-built agent types, tailored for different deployment scenar
 Beyond lifecycle management, the agents are equipped to collect and provide essential metrics such as application health status and version information. They also aggregate logs, ensuring that troubleshooting can proceed even if a deployment fails and cannot report the error itself.
 
 <Aside>
-  We are currently working on an agent version that can be integrated into the Software or AI companies'
-  Helm chart or Docker Compose file. This will allow for a more seamless
-  deployment experience for the end customer. For more information feel free to
-  reach out.
+  We are currently working on an agent version that can be integrated into the
+  Software or AI companies' Helm chart or Docker Compose file. This will allow
+  for a more seamless deployment experience for the end customer. For more
+  information feel free to reach out.
 </Aside>
