--- a/src/content/docs/docs/product/faqs.mdx
+++ b/src/content/docs/docs/product/faqs.mdx
@@ -19,8 +19,8 @@ sidebar:
   <p>
     Distr agents are lightweight components that are installed in the target
     deployment environment and can be delivered by Distr or embedded directly
-    into the vendor's Helm charts or Docker Compose files. They handle lifecycle tasks
-    such as installation, updates, and rollbacks while providing essential
+    into the vendor's Helm charts or Docker Compose files. They handle lifecycle
+    tasks such as installation, updates, and rollbacks while providing essential
     metrics and logs.
   </p>
 </details>
@@ -41,10 +41,10 @@ sidebar:
     No, there is no way to toggle between the Vendor and Customer views. If a
     vendor wants to manage their own deployments, they can do so using the
     Deployments tab within the Vendor Portal. The Customer Portal is only
-    accessible to end-customers who have been onboarded by a software vendor. After
-    onboarding, the customer will receive an email to set their credentials.
-    Once the credentials are set, the end-customer can access the Customer
-    Portal.{' '}
+    accessible to end-customers who have been onboarded by a software vendor.
+    After onboarding, the customer will receive an email to set their
+    credentials. Once the credentials are set, the end-customer can access the
+    Customer Portal.{' '}
   </p>
 </details>
 
