--- a/src/content/docs/docs/getting-started/how-it-works.mdx
+++ b/src/content/docs/docs/getting-started/how-it-works.mdx
@@ -6,37 +6,88 @@ sidebar:
 ---
 
 import {Aside} from '@astrojs/starlight/components';
+import MermaidDiagram from '../../../../components/MermaidDiagram.astro';
 
-## Components
+## Flexible Architecture
 
-[Distr](https://distr.sh/) is a comprehensive platform available both as a [SaaS](https://glasskube.dev/glossary/saas-definition/) solution and as a fully [self-hostable](/docs/self-hosting/getting-started/) option. It allows Software and AI companies deliver their applications to self-managed customers through a centralized platform. This platform enables end customers to access available application versions and maintain control over when and where installations are deployed.
+Distr offers multiple architectural approaches to software distribution and management, adapting to different customer environments and security requirements.
 
-The platform consists of two key components:
+<MermaidDiagram 
+  chart={`
+graph TD
+    DH[Distr Hub] --- DR[Distr Registry]
+    DH --- AP[Application Definitions]
+    
+    %% Registry-based path
+    DR -.-> AG1[Gateway/Physical Media]
+    AG1 --> CR[Customer Registry]
+    CR --> DEV1[Development]
+    CR --> STG1[Staging]
+    CR --> PROD1[Production]
+    
+    %% Agent-based path
+    AP --> AG2[Deployment Agents]
+    AG2 --> DEV2[Development]
+    AG2 --> STG2[Staging]
+    AG2 --> PROD2[Production]
+    
+    subgraph "Customer Environment - Registry Based"
+    AG1
+    CR
+    DEV1
+    STG1
+    PROD1
+    end
+    
+    subgraph "Customer Environment - Agent Based"
+    AG2
+    DEV2
+    STG2
+    PROD2
+    end
 
-1. **Distr Hub**: A centralized platform accessible via a GUI, API, or SDK. This is where vendors manage their application deployments and provide version updates to customers.
-2. **Distr Agents**: Lightweight components, one for Docker Compose and another for Helm-packaged applications, deployed within the customer-controlled environment, alongside the vendor application. The agent handles maintenance and lifecycle tasks and communicates with Distr Hub. It reports critical information such as uptime status and the current application version while comparing it to the versions made available by the vendor.
+    style DH fill:#f9f,stroke:#333,stroke-width:2px
+    style DR fill:#bbf,stroke:#333,stroke-width:2px
+    style AP fill:#bbf,stroke:#333,stroke-width:2px
+    style AG1 fill:#fbb,stroke:#333,stroke-width:2px
+    style AG2 fill:#fbb,stroke:#333,stroke-width:2px
+    style CR fill:#bfb,stroke:#333,stroke-width:2px
+`}
+/>
 
-This architecture ensures that communication and updates between the software vendor and their end customers is as close to real time as possible, facilitating efficient application lifecycle management.
+### Core Components
 
-<Aside type="note">
-  Ready to get started? Create your Distr account
-  [here](https://glasskube.cloud/signup.html) and then following the onboarding
-  steps here
-</Aside>
+1. **Distr Hub**: The central platform where vendors manage all aspects of their application distribution:
+   - Application versioning and metadata management
+   - Customer access control and license management
+   - Deployment monitoring and status tracking
+
+2. **Distribution Methods**:
+   
+   a. **Registry-Based Distribution**:
+   - **Distr Registry**: Repository for application artifacts
+   - **Gateway/Physical Media**: Connection methods varying by security requirements
+   - **Customer Registry**: Local storage in customer environment
+   
+   b. **Agent-Based Distribution**:
+   - **Application Definitions DB**: Central storage for deployment configurations
+   - **Deployment Agents**: Lightweight components that pull configurations and handle deployments
+
+This flexible architecture allows Distr to adapt to various customer requirements, from fully connected to air-gapped environments, without sacrificing functionality.
 
 ## Two Portals, One Platform
 
 The Distr platform was designed with [ISVs in mind](https://glasskube.dev/blog/5-ways-to-succeed-without-access-to-customer-environments/), prioritizing their success by ensuring end customers are satisfied. To achieve this, the platform includes two distinct control consoles.
 
-Upon signing up, ISVs are greeted with the default view: the **"Vendor Platform"**. This can be verified from the top-right corner of the interface, this console allows ISVs to onboard customer profiles and invite their customers to the Distr platform. When an ISV sends an invite link, customers are directed to the **"Customer Portal"**. This portal provides customers with access to the ISV’s application, available versions, and tools to manage the deployment and lifecycle of the application.
+Upon signing up, ISVs are greeted with the default view: the **"Vendor Portal"**. This console allows ISVs to manage their application registry, onboard customers, and monitor deployments. When an ISV invites a customer, they receive access to the **"Customer Portal"** - a streamlined interface focused only on the applications they've licensed.
 
 ![vendor-portal](../../../../assets/docs/getting-started/how-it-works/dashboard.png)
 
-The Customer Portal takes a "less is more" approach, offering only the essential features customers need to manage the applications they’ve purchased.
+The Customer Portal takes a "less is more" approach, offering only the essential features customers need to manage the applications they've purchased.
 
 ![customer-portal](../../../../assets/docs/getting-started/how-it-works/customer-portal.png)
 
-ISVs also have the option to white-label the Customer Portal, aligning it with their corporate [branding](https://glasskube.dev/docs/product/branding/). This creates a impression of an extension of the ISV’s product suite, often leaving end customers unaware that a third-party platform powers the delivery of their on-premises offering.
+ISVs can white-label the Customer Portal to align with their branding, creating a seamless extension of their product suite.
 
 ## Programmatic access
 
@@ -48,9 +99,15 @@ The [Distr API](/docs/integrations/api/), allows users to bypass the GUI for dir
 
 ### Distr SDK
 
-The [Distr SDK](/docs/integrations/sdk/) enables users and developers to embed Distr’s application management features directly into their own applications or to even write new applications that leverage the SDK. While SDK development runs in parallel with Distr development, there may be occasional gaps in feature parity due to development speed and the impracticality of implementing certain platform-specific features in the SDK. Nevertheless, the SDK provides a powerful way to integrate Distr functionality into your workflows, and we encourage you to explore its capabilities.
+The [Distr SDK](/docs/integrations/sdk/) enables users and developers to embed Distr's application management features directly into their own applications or to even write new applications that leverage the SDK. While SDK development runs in parallel with Distr development, there may be occasional gaps in feature parity due to development speed and the impracticality of implementing certain platform-specific features in the SDK. Nevertheless, the SDK provides a powerful way to integrate Distr functionality into your workflows, and we encourage you to explore its capabilities.
 
 <Aside type="note">
   For more in-depth information on both the Distr API and SDK, head over to the
   Developer Tools section of the docs.
+</Aside>
+
+<Aside type="tip">
+  Ready to get started? Create your Distr account
+  [here](https://glasskube.cloud/signup.html) and follow the onboarding
+  steps to set up your first application distribution.
 </Aside>
