--- a/src/content/docs/docs/getting-started/quickstart.mdx
+++ b/src/content/docs/docs/getting-started/quickstart.mdx
@@ -1,174 +1,123 @@
 ---
 title: Quickstart
-description: distr.sh is an Open Source software distribution platform?
+description: Get started with Distr in minutes
 sidebar:
   order: 3
 ---
 
 import {Aside} from '@astrojs/starlight/components';
 
+## Overview of Distr Use Cases
+
+Distr supports five distinct deployment models to meet different customer requirements:
+
+- **[Fully Self-Managed](/docs/use-cases/fully-self-managed/)**: For customers who maintain complete control over their infrastructure with no vendor agents, using Distr Registry for artifact delivery.
+- **[Assisted Self-Managed](/docs/use-cases/assisted-self-managed/)**: Balances customer infrastructure control with vendor-provided deployment agents that simplify updates and maintenance.
+- **[Bring Your Own Cloud (BYOC)](/docs/use-cases/byoc/)**: Fully vendor-managed deployments within customer-owned cloud subscriptions, ideal for regulatory compliance.
+- **[Air-Gapped Environments](/docs/use-cases/air-gapped/)**: For high-security scenarios with physical or logical network isolation, offering secure artifact delivery through whitelisted connections or physical media.
+- **[Edge Deployments](/docs/use-cases/edge-deployments/)**: For vendor-controlled deployments to decentralized edge locations, IoT devices, or specialized hardware.
+
+Each model leverages Distr's flexible architecture to provide the right balance of control, security, and operational efficiency.
+
 ## Prerequisites
 
-Distr is designed to help distribute "self-managed" ready software to [customer-controlled environments](https://glasskube.dev/blog/5-ways-to-succeed-without-access-to-customer-environments/). The key phrase here is ["self-managed ready"](https://glasskube.dev/white-paper/building-blocks/).
-
-### What does "self-managed ready" mean?
-
-#### Self-managed ready checklist:
-
-- Your application is **fully containerized** (Docker or Helm)
-- You are using some sort of **consistent versioning**
-- If your application has dependencies, these should also be **standardized and declared**
-
-If you're a software company who has developed a SaaS product and later been approached by a customer requesting to use your product in a "self-managed" deployment, you've likely experienced the challenges of lacking self-managed readiness. Deploying to self-managed environments or complex customer-controlled environments requires deliberate decisions and architectural considerations made early in the development process to ensure such deployments are practical.
-
-Software built with self-managed readiness in mind from the start often reflects thoughtful design, focusing on maintainability and configurations suitable for future self-managed use cases. However, many software solutions aren't initially created with these scenarios in mind. As customer requirements evolve, SaaS products may need adjustments to support self-managed deployments. Ideally, your application should already be containerized, with a Docker Compose file or Helm chart prepared. If not, feel free to reach out for white-labeled onboarding assistance.
-
-#### What changes are needed for self-managed readiness?
-
-To bridge this gap, we've compiled a document outlining the foundational building blocks for achieving self-managed readiness. You can access this comprehensive [whitepaper here](https://glasskube.dev/white-paper/building-blocks/).
-
-## Quickstart
-
-In this Quickstart guide, we'll walk through the primary workflow designed to help Distr users get the most value from the platform. Here's what we'll cover:
-
-- Open your **free** [Distr account](https://distr.sh/).
-- **Onboarding a sample application** to explore how Distr works.
-- **Choosing a deployment target setup**:
-- Onboard your first customer, or
-- Assign yourself as the owner of the deployment target environment.
-- **Creating a deployment** and verifying its installation using the Distr agent.
-
-All of this can be easily accomplished by following the helpful Onboarding Wizard. Let's get started!
-
-## Follow the onboarding wizard to get started
-
-<Aside type="note">
-  The Onboarding Wizard will only appear if your Distr account has not yet
-  created its first application, customer, or deployment. If you've already used
-  the Onboarding Wizard but would like to add more applications, customers, or
-  deployments, please follow these
-  [instructions.](#onboard-more-applications-customers-and-deployments)
-</Aside>
-
-### Onboarding Wizard
-
-The Onboarding Wizard is a step-by-step guide that assists Distr users in uploading an application based on a Docker Compose file or a Helm chart, onboarding a customer if one is available, and adding a deployment that will be installed by the Distr agent.
-
-<Aside type="note">
-  The Onboarding Wizard also offers the option to onboard a sample app for
-  testing purposes. To gain a better understanding of how Distr works, we'll
-  begin by onboarding the [test app](https://github.com/go-shiori/shiori).
-</Aside>
-
-![wizard-start](../../../../assets/docs/getting-started/quickstart/wizard-start.png)
-
-### Let's Onboard a Sample Application
-
-Upon clicking "Continue" on the initial Onboarding Wizard screen, you'll be prompted to choose the type of app definition files you'd like to onboard. Distr users can select either Docker Compose files or Helm charts. Alternatively, you can click the "I don't know yet, please just let me test!" checkbox (shown in the image below) to deploy a sample bookmarking app, which is based on a Docker Compose file.
-
-At this stage, Distr handles the process of locating the app definition file, exposing the application version and preparing it for distribution.
-
-![test-app](../../../../assets/docs/getting-started/quickstart/wizard-test.png)
-
-### Define Ownership of Target Environment
-
-Next, you'll move to the stage where users are prompted to choose a name and define who is responsible for the target environment where the application will be deployed. Deployment targets can either be managed by the end-customer or directly by the Distr user. At this step, you'll find two checkboxes to choose from:
-
--- **"I Am"**: Select this if you are responsible for and have control over the deployment target, such as for IoT, edge, or internal use cases.
-
--- **"An employee of the customer"**: Select this when the end-user's team is responsible for managing deployments, and the Distr user does not have access to the deployment target. More suited towards the self-managed use case.
-
-![define-owner](../../../../assets/docs/getting-started/quickstart/customer-creation.png)
-
-<Aside type="note">
-  Once you click `Continue`, Distr will create a deployment named
-  `Test-Customer`. Since the target deployment environment hasn't been connected
-  yet, the deployment status will appear in the gray `initial` stage. To
-  complete the process and make the deployment of our test app healthy, we'll
-  need to connect the target environment to Distr.
-</Aside>
-
-Deployment with status: `initial`
-
-![deployment-check](../../../../assets/docs/getting-started/quickstart/app-created.png)
-
-### Connect the Target Environment with the Distr Agent
-
-To complete the final step and connect the target environment to Distr, you'll need to access the target environment and run the curl command displayed in the Onboarding Wizard console. In this test case, the agent will be installed in a local Docker Desktop environment. So make sure to have access to a local Docker desktop instance.
-
-Once the agent is installed, it will pull the deployment specifications and install the deployment into the target environment. After installation, the agent will communicate with the Distr hub to confirm that the deployment is up and running. This will update the status on the deployment page to `"OK"`.
-
-![run-agent](../../../../assets/docs/getting-started/quickstart/connection-command.png)
-
-Run the Distr agent in the target environment:
-
 <Aside type="tip">
-  If you are running the agent on macOS, make sure to checkout the [macOS setup
-  guide](/docs/guides/distr-on-macos/) for additional steps.
+  Don't have an application ready? No problem! You can follow the tutorials and ship a sample app to learn the platform. Distr provides test applications that let you explore all features without setting up your own app first.
 </Aside>
 
-![run-agent](../../../../assets/docs/getting-started/quickstart/run-command.png)
+If you're ready to distribute your own application with Distr, it should be:
+- **Containerized** (Docker or Helm)
+- Using **consistent versioning**
+- Have **standardized dependencies**
 
-### The Test Deployment is Operational
+For more details on preparing your application, see our [self-managed readiness guide](https://glasskube.dev/white-paper/building-blocks/).
 
-Check in the "Deployments" tab, to see if the test deployments health is _green_.
+## Where to start
+### Getting Started with Platform Tutorials
 
-Deployment with status: `OK`
+The fastest way to learn Distr is through the interactive tutorials available directly on the platform. When you first create an account, you'll have access to three guided tutorials that cover the core capabilities:
 
-![agent-up](../../../../assets/docs/getting-started/quickstart/deployment-healthy.png)
+### 1. Registry Configuration Tutorial
 
-As mentioned earlier, the test bookmarking app is packaged in a Docker Compose file and runs locally on Docker Desktop. You can verify the deployment by checking the running Docker containers.
+This tutorial guides you through:
+- Setting up your registry slug
+- Understanding how the registry works
+- Pushing and pulling artifacts
+- Managing registry access
 
-To do this, run the command `docker ps` to view the active containers in your Docker environment.
+The registry is a key component for distributing your applications, especially for air-gapped environments.
 
-Here's what you'll find:
+### 2. Deployment Agent Tutorial
 
-1. The Distr agent was installed first.
-2. The agent then deployed two additional containers:
+Learn how to:
+- Download and install the Distr agent
+- Deploy a sample application
+- Monitor deployment status
+- Update applications through the agent
 
-- The Shiori app
-- The Shiori app's database container
+The deployment agent connects customer environments to Distr, enabling seamless application management.
 
-![docker-ps](../../../../assets/docs/getting-started/quickstart/docker-ps.png)
+### 3. Branding Customization Tutorial
 
-You can also navigate to the main Dashboard page, where the widgets will update to display the latest uptime and deployment metrics currently available.
+Customize the customer experience by:
+- Adding your company logo
+- Customizing the color scheme
+- Personalizing welcome messages
+- Creating a seamless brand experience
 
-![dashboard-view](../../../../assets/docs/getting-started/quickstart/dashboard-new-deploy.png)
+Your customers will see your brand, not Distr, creating a consistent experience.
 
-## Onboard more applications, customers and deployments.
+## Accessing the Tutorials
 
-Distr users will only see the Onboarding Wizard once, and only if no applications have been onboarded. After completing the onboarding process by adding their first application, customer, and running the first deployment, all of these steps can be repeated individually as needed.
+To access these tutorials:
 
-### Add More Applications
+1. Create your **free** [Distr account](https://distr.sh/)
+2. Navigate to the Dashboard
+3. Look for the "Tutorials" section
+4. Select the tutorial you want to complete
 
-Head over to the `Applications` tab and in the top right corner click on the `+ Add Application` button. And simply follow the steps.
+<Aside type="note">
+  You can complete the tutorials in any order, but we recommend starting with the Deployment Agent tutorial to quickly see Distr in action.
+</Aside>
+
+## After Completing Tutorials
+
+After completing the platform tutorials, you'll be ready to:
+
+1. **Onboard Your Applications**: Add your Docker Compose or Helm chart-based applications to Distr
+2. **Invite Customers**: Bring your customers into your branded portal
+3. **Create Deployments**: Set up application deployments for different environments
+4. **Manage Licenses**: Control access to applications and versions
+
+### Adding More Applications
+
+Head over to the `Applications` tab and in the top right corner click on the `+ Add Application` button.
 
 ![add-application](../../../../assets/docs/getting-started/quickstart/add-app.png)
 
-### Invite More Customers
+### Inviting Customers
 
-Head over to the `Customers` tab and in the top right corner click on the `+ Invite customer` button. And simply follow the steps.
+Head over to the `Customers` tab and in the top right corner click on the `+ Invite customer` button.
 
 ![invite-customer](../../../../assets/docs/getting-started/quickstart/add-customer.png)
 
 <Aside type="caution">
-  Once the customer's email address is submitted, the recipient will receive an
-  email containing login credentials for the Distr Customer Portal. Through this
-  portal, they can view and manage the deployments of the applications they have
-  purchased from the software company.
+  When you invite a customer, they'll receive login credentials for your branded Customer Portal, where they can view and manage their deployments.
 </Aside>
 
-### Add More Deployments
+### Creating Deployments
 
-Head over to the `Deployments` tab and click on the `+ Add deployment` button and follow the steps.
+Head over to the `Deployments` tab and click on the `+ Add deployment` button.
 
 ![Add deployments](../../../../assets/docs/getting-started/quickstart/add-deploy.png)
 
-- For more information on how to deploy a Docker compose packaged application, check out this [guide](/docs/guides/onboarding-a-docker-app/).
-- For more information on how to deploy a Helm chart packaged application, check out this [guide](/docs/guides/onboarding-a-helm-app/).
+- For Docker applications, check out this [guide](/docs/guides/onboarding-a-docker-app/)
+- For Helm applications, check out this [guide](/docs/guides/onboarding-a-helm-app/)
 
-### Create your first software license
+### Managing Licenses
 
-Easily manage customer access by associating specific applications and application versions with a license. Give the license a name, set an expiration date, and gain granular control over what each customer can access.
+Associate specific applications and versions with customer licenses. For full details, check out the [License Management guide](/docs/guides/license-mgmt/).
 
-For full details, check out the [License Management guide](/docs/guides/license-mgmt/).
+<Aside type="tip">
+  Need more help? Join our [Community Slack](https://distr.sh/slack) for assistance from our team and other Distr users.
+</Aside>
