--- a/src/content/docs/docs/guides/platform-management/license-mgmt.mdx
+++ b/src/content/docs/docs/guides/platform-management/license-mgmt.mdx
@@ -18,7 +18,7 @@ With the licensing feature, you can link a license to a customer, allowing acces
 
 ## License flow diagram
 
-![license-diagram](../../../../assets/docs/guides/license-diagram.png)
+![license-diagram](../../../../../assets/docs/guides/license-diagram.png)
 
 <Aside type="note">
   The diagram above illustrates how a license links an end-customer account to a
@@ -54,14 +54,14 @@ If you don’t see the feature yet, reach out, and we’ll enable it for you. On
 
 The customer can now access and deploy the assigned application version/s directly from their [customer portal](/docs/product/customer-portal/).
 
-![license-form](../../../../assets/docs/guides/license-form.png)
+![license-form](../../../../../assets/docs/guides/license-form.png)
 
 ## OCI registry authentication:
 
 If your images are stored in a private OCI registry, you'll need to provide access credentials. You can configure these credentials in the lower section of the license configuration panel. Once set, the application versions will be available at the deployment target for as long as the license is valid.
 
-![OCI-registry-auth](../../../../assets/docs/guides/OCI-Registry-auth.png)
+![OCI-registry-auth](../../../../../assets/docs/guides/OCI-Registry-auth.png)
 
 ## Licensing walkthrough video
 
-[![Watch the video](../../../../assets/docs/guides/license-thumbnail.png)](https://www.youtube.com/watch?v=qh-ewkWxRj4)
+[![Watch the video](../../../../../assets/docs/guides/license-thumbnail.png)](https://www.youtube.com/watch?v=qh-ewkWxRj4)
