--- a/src/content/docs/docs/product/agents.mdx
+++ b/src/content/docs/docs/product/agents.mdx
@@ -1,21 +1,121 @@
 ---
-title: Distr Agents
+title: Deployment Agents
 description: Information on the Distr agents
 sidebar:
-  order: 3
+  order: 2
 ---
 
 import {Aside} from '@astrojs/starlight/components';
+import ThemeImage from '../../../../components/ThemeImage.astro';
 
-Alongside the Distr Hub, what completes the core of the Distr platform are its lightweight agents, designed to be installed in the customer's environment alongside the software vendor's application. These agents provide the functionality necessary for managing application life cycles in decentralized and customer-controlled environments, without requiring direct access to the deployment target.
+Deployment Agents are a core component of the Distr platform, designed to run within customer environments alongside vendor applications. These lightweight agents bridge the gap between the Distr Hub and deployment targets, enabling comprehensive lifecycle management requiring minimal access to customer infrastructure.
 
-Distr offers two pre-built agent types, tailored for different deployment scenarios: one for Helm and another for Docker Compose. These agents handle critical lifecycle tasks, including guided installation, updates, and performing health checks. By automating these processes, the agents simplify the operational burden for end customers and reduce the need for the vendor's intervention.
+<Aside type="note">
+  Distr deployment agents are the key components that enable the [Assisted Self-Managed Customer](/docs/use-cases/assisted-self-managed/) and [BYOC](/docs/use-cases/byoc/) use cases.
+</Aside>
 
-Beyond lifecycle management, the agents are equipped to collect and provide essential metrics such as application health status and version information. They also aggregate logs, ensuring that troubleshooting can proceed even if a deployment fails and cannot report the error itself.
+## Agent Types
+
+Distr offers specialized agents for different deployment tools, each designed to handle specific deployment scenarios while maintaining consistent core functionality.
+
+### Docker Compose Agent
+
+The Docker Compose agent is specifically designed for container-based deployments, providing comprehensive management of both single and multi-container applications. It handles application updates with minimal downtime, collects container health metrics and logs, and supports environment variable templating for flexible configuration.
+
+<ThemeImage 
+  lightSrc="/src/assets/docs/product/deployment-agents/docker-agent-light.png"
+  darkSrc="/src/assets/docs/product/deployment-agents/docker-agent-dark.png"
+  alt="Docker Compose Agent interface"
+/>
+
+#### Configuration Steps
+1. Navigate to the Deployments panel in the Agents section
+2. Click "+ Add deployment"
+3. Provide a deployment name
+4. Install the agent
+5. Select the application and version to deploy
+6. Configure environment variables
+7. Deploy the application
+8. Monitor deployment status
+
+### Helm Agent
+
+The Helm agent specializes in Kubernetes deployments, managing the complete lifecycle of Helm charts in customer environments. It handles chart installation and upgrades, monitors Kubernetes resource health, supports customer-specific value overrides, and provides rollback capabilities for failed deployments.
+
+<ThemeImage 
+  lightSrc="/src/assets/docs/product/deployment-agents/helm-agent-light.png"
+  darkSrc="/src/assets/docs/product/deployment-agents/helm-agent-dark.png"
+  alt="Helm Agent interface"
+/>
+
+#### Configuration Steps
+1. Access the Deployments panel in the Agents section
+2. Create a new deployment
+3. Install the Helm agent
+4. Select the target application and version
+5. Configure Helm values
+6. Deploy and monitor the application
+
+### Terraform Agent (Coming Soon)
+
+<Aside type="note">
+  Our upcoming Terraform agent will unlock powerful infrastructure-as-code capabilities, particularly for Bring Your Own Cloud (BYOC) scenarios.
+</Aside>
+
+The Terraform agent will revolutionize infrastructure management by enabling the deployment of complete environments using Terraform modules stored in the Distr Registry. This agent will manage both infrastructure and applications, handle customer-specific cloud resource variables, and maintain infrastructure state tracking and versioning.
+
+This agent will be particularly valuable for fully managed deployments where vendors need to provision and configure the underlying infrastructure before deploying their applications.
+
+## Section Components
+
+The Deployment Agents section of Distr consists of three main components that work together to provide a complete deployment management solution.
+
+### Applications
+
+<ThemeImage 
+  lightSrc="/src/assets/docs/product/deployment-agents/apps-light.png"
+  darkSrc="/src/assets/docs/product/deployment-agents/apps-dark.png"
+  alt="Applications interface"
+/>
+
+The Applications section provides vendors with a dedicated space to configure and manage their software offerings. Using either Docker Compose files or Helm charts, vendors can define their application templates, specify which environment variables are configurable by customers, and manage different versions of their applications. This section serves as the foundation for all subsequent deployment activities.
+
+For detailed instructions on adding applications to Distr, see our platform management guides:
+- [Onboarding a Docker Application](/docs/guides/platform-management/onboarding-a-docker-app/)
+- [Onboarding a Helm Application](/docs/guides/platform-management/onboarding-a-helm-app/)
+
+### Deployments
+
+<ThemeImage 
+  lightSrc="/src/assets/docs/product/deployment-agents/deploy-light.png"
+  darkSrc="/src/assets/docs/product/deployment-agents/deploy-dark.png"
+  alt="Deployments interface"
+/>
+
+The Deployments section serves as the operational hub for both vendors and customers, though with different perspectives and capabilities.
+
+Vendors use this section to monitor the health and status of all customer deployments, track performance metrics, and manage their own infrastructure deployments. They can view real-time status updates, deployment metadata, and performance indicators across all customer environments.
+
+Customers, on the other hand, use this section to access and manage their purchased applications. Through the agent configuration panel, they can install agents in their infrastructure, customize application settings using the environment variables made available by vendors, and monitor their own deployments.
+
+### Licenses
+
+<ThemeImage 
+  lightSrc="/src/assets/docs/product/deployment-agents/licenses-light.png"
+  darkSrc="/src/assets/docs/product/deployment-agents/licenses-dark.png"
+  alt="Licenses interface"
+/>
+
+The Licenses section provides granular control over application access through 1:1 binding between applications (or specific versions) and individual customers. This feature enables precise license management and access control, ensuring that only authorized customers can deploy specific applications or versions.
+
+<Aside type="note">
+  The license binding feature is currently in beta. Contact us to request access and learn more about its capabilities.
+</Aside>
+
+## Agent Capabilities
+
+All Distr agents share a common set of core capabilities designed to ensure reliable and secure deployments. These include guided installation processes, automated application updates, comprehensive health monitoring, log aggregation for troubleshooting, and secure, outbound-only communication with the Distr Hub.
 
 <Aside>
-  We are currently working on an agent version that can be integrated into the
-  Software or AI companies' Helm chart or Docker Compose file. This will allow
-  for a more seamless deployment experience for the end customer. For more
-  information feel free to reach out.
+  We are also developing an embeddable agent SDK that can be integrated directly into vendor applications, providing a more seamless deployment experience with minimal additional components. For more information, feel free to reach out.
 </Aside>
