--- a/src/content/docs/docs/use-cases/air-gapped.mdx
+++ b/src/content/docs/docs/use-cases/air-gapped.mdx
@@ -1,28 +1,50 @@
 ---
-title: Air Gapped Environments
-description: An explanation on the Air gapped use-case
+title: Air-Gapped Environments
+description: For customers with highly restrictive environments isolated from external networks
 sidebar:
-  order: 3
+  order: 4
 ---
 
 import {Aside} from '@astrojs/starlight/components';
+import MermaidDiagram from '../../../../components/MermaidDiagram.astro';
 
-[Air-gapped](https://glasskube.dev/glossary/air-gapped-meaning/) environments are particularly challenging deployment targets for Software and AI companies. Serving air-gapped customers requires vendors to navigate a unique set of peculiarities and challenges inherent to these environments.
+Distr supports air-gapped environments where strict security requirements demand physical or logical isolation from public networks. The air-gapped deployment model serves organizations in regulated industries (defense, finance, critical infrastructure) that cannot allow external connectivity or agents in their environment.
 
-## Difficulties of Air-Gapped Environments
+Distr offers two approaches: **IP Whitelisting** for environments that can permit limited external connections, and **Self-Hosted Registry with Physical Transfers** for completely isolated environments, where updates are delivered via encrypted physical media with cryptographic verification.
 
-- **Updates cannot be delivered through public registries**: Air-gapped environments block access to external networks, requiring updates to be distributed through offline methods such as portable storage devices or private registries.
-- **Limited communication channels**: Since no internet access is available, troubleshooting and support must rely on offline diagnostics or highly secure, manual transfer methods.
-- **Compliance overhead**: Vendors may need to adhere to strict regulatory or security protocols when providing software to air-gapped environments, adding complexity to the deployment process.
-- **Longer deployment cycles**: Delivering software updates and patches often involves time-consuming manual processes, which can delay critical fixes or improvements.
-- **Monitoring limitations**: Real-time monitoring tools often rely on internet connectivity, meaning vendors must provide alternative solutions for tracking performance and uptime in an air-gapped environment.
-- **Secure data transfer**: Transferring logs, metrics, or error reports back to the software vendor for analysis may require special secure methods, such as physical media or encrypted file transfers.
-- **Training and documentation needs**: Customers in air-gapped environments often require more detailed training and comprehensive documentation since direct vendor support may not always be immediately accessible.
+### Solution Architecture
 
-## How does Distr tackle these challenges?
+<MermaidDiagram 
+  chart={`
+graph TD
+    DR[Distr Registry] -.-> FW[Firewall Gate / Physical Device]
+    FW --> CR[Customer Registry]
+    CR --> CD1[Dev]
+    CR --> CD2[Staging]
+    CR --> CD3[Production]
+    CD1 --> A1[Dev-Application]
+    CD2 --> A2[Staging-Application]
+    CD3 --> A3[Prod-Application]
 
-<Aside type="note">
-  Are you serving Air-gapped customer? If so [get in
-  touch](https://cal.glasskube.com/team/gk/demo?duration=30) and we can walk you
-  through the Air gapped specific features.
+    subgraph "Customer Environment"
+    FW
+    CR
+    CD1
+    CD2
+    CD3
+    A1
+    A2
+    A3
+    end
+
+    style DR fill:#f9f,stroke:#333,stroke-width:2px
+    style FW fill:#bbf,stroke:#333,stroke-width:2px
+    style CR fill:#bfb,stroke:#333,stroke-width:2px
+`}
+/>
+
+<Aside type="tip">
+  This approach allows you to serve security-conscious customers without compromising their security posture or compliance requirements.
 </Aside>
+
+[Read the implementation guide →](/docs/guides/implementation/air-gapped-guide)
