--- a/src/content/docs/docs/use-cases/byoc.mdx
+++ b/src/content/docs/docs/use-cases/byoc.mdx
@@ -1,14 +1,63 @@
 ---
 title: Bring Your Own Cloud (BYOC)
-description: An explanation on the BYOC use-case
+description: Fully vendor-managed deployments within customer-owned cloud subscriptions
 sidebar:
-  order: 2
+  order: 3
 ---
 
-[BYOC](https://glasskube.dev/glossary/byoc-definition/) deployments involve delivering commercial software to environments where the software vendor has some level of shared responsibility or permission to access and manage the customer-owned target deployment environment.
+import {Aside} from '@astrojs/starlight/components';
+import MermaidDiagram from '../../../../components/MermaidDiagram.astro';
 
-This model is well-suited for end customers who may lack extensive infrastructure expertise but still require third-party software to be deployed within their own data centers or cloud environments. These customers might have a small or non-existent technical team and are often comfortable granting the vendor access to a dedicated cloud account or direct access to devices within their infrastructure for management purposes.
+Bring Your Own Cloud (BYOC) provides fully vendor-managed operations within customer-owned cloud resources. This model addresses regulatory requirements for resource ownership while delivering the operational simplicity of a managed service. Perfect for organizations with strict data residency or compliance requirements that need to maintain ownership of their cloud infrastructure.
 
-The key distinction between BYOC and self-managed deployments is the approach to software updates. In BYOC scenarios, updates can be both **pulled** by the end customer **and pushed** directly by the vendor. This added flexibility simplifies update management for customers who may prefer or require additional support.
+Distr handles the entire deployment lifecycle in the customer's cloud account through secure, limited access permissions. Agents deployed in the customer environment allow vendors to manage applications consistently across all customer environments, while customers maintain control of their cloud resources and billing relationship.
 
-When onboarding a customer, vendors can determine whether BYOC support is needed. If so, the platform will enable upgrade-pushing capabilities, allowing vendors to manage updates proactively. Additionally, BYOC deployments provide vendors with the ability to customize configurations, such as Helm values, which are typically reserved for end customers in the self-managed deployment model. This customization capability allows vendors to tailor deployments to meet specific customer requirements.
+### Solution Architecture
+
+<MermaidDiagram 
+  chart={`
+graph TD
+
+  subgraph Vendor_Environment
+    hub[Distr Hub]
+    reg[Distr Registry]
+    stor[PostgreSQL]
+    hub --> reg
+    stor --> hub
+  end
+
+  subgraph Customer_Environment
+    tfAgent[Terraform Agent]
+    dockerAgent[Docker Agent]
+    helmAgent[Helm Agent]
+
+    aws[AWS Account]
+    gcp[GCP Project]
+    azure[Azure Subscription]
+
+    vmApp[App on VM]
+    k8sApp[App on K8s]
+    infra[Provisioned Infra]
+
+    hub --> tfAgent
+    hub --> dockerAgent
+    hub --> helmAgent
+
+    reg --> tfAgent
+
+    tfAgent --> aws
+    tfAgent --> gcp
+    tfAgent --> azure
+
+    dockerAgent --> vmApp
+    helmAgent --> k8sApp
+    tfAgent --> infra
+  end
+`}
+/>
+
+<Aside type="tip">
+  BYOC offers SaaS-like operational simplicity with the compliance benefits of customer resource ownership.
+</Aside>
+
+[Read the implementation guide →](/docs/guides/implementation/byoc-deployment-guide)
